--- a/Lista de Tarefas/index.html
+++ b/Lista de Tarefas/index.html
@@ -20,6 +20,7 @@
             <div id="res">
 
             </div>
+            <input id="limpar" type="button" value="Limpar tudo">
         </div>
     </section>
 
