--- a/Lista de Tarefas/index.html
+++ b/Lista de Tarefas/index.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header class="tamanho">
+    <header class="">
         <h1>Lista de Tarefas</h1>
     </header>
 
-    <section class="tamanho">
-        <input type="text" name="" id="nome" placeholder="Nome">
-        <input type="text" name="" id="tarefa" placeholder="Tarefa">
+    <section class="">
+        <input type="text" name="" class="dados" id="nome" placeholder="Nome">
+        <input type="text" name="" class="dados" id="tarefa" placeholder="Tarefa"><br>
         <input type="button" value="Adicionar Tarefa" id="adicionar">
         <div>
-            <h2>Tarefas Agendadas</h2>
+            <h2 id="h2">Tarefas Agendadas</h2>
             <div id="res">
 
             </div>
-            <input id="limpar" type="button" value="Limpar tudo">
+            <input id="limpar" class="limpar" type="button" value="Limpar tudo">
         </div>
     </section>
 
