--- a/Lista de Tarefas/index.html
+++ b/Lista de Tarefas/index.html
@@ -16,7 +16,7 @@
         <input type="text" name="" class="dados" id="tarefa" placeholder="Tarefa"><br>
         <input type="button" value="Adicionar Tarefa" id="adicionar">
         <div>
-            <h2 id="h2">Tarefas Agendadas</h2>
+            <h2 class="text" id="h2">Tarefas Agendadas</h2>
             <div id="res">
 
             </div>
